--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "eslint": "^9.37.0",
+    "jquery": "^3.7.1",
+    "neostandard": "^0.12.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-eslint": "^8.46.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
